--- a/index.html
+++ b/index.html
@@ -22,15 +22,19 @@
     </header>
     <main>
       <!-- Search Bar -->
+      <img
+        class="search-icon"
+        src="./assets/images/icon-search.svg"
+        alt="Search Icon"
+      />
       <form class="search-bar">
         <input
           type="text"
           class="search-input"
           placeholder="Search for a place..."
         />
-        <button class="search-btn">
-          <img src="./assets/images/icon-search.svg" alt="Search Icon" />
-        </button>
+
+        <button class="search-btn">Search</button>
       </form>
 
       <!-- Weather Background Image -->
